# workingnote

./: GEMINI.md  package-lock.json  package.json
docs/: FUNCTIONAL_SPEC.md  GEMINI.md  UI_SPEC.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Checkbox.module.css  Checkbox.tsx  ConfirmDialog.module.css  ConfirmDialog.tsx  ContextMenu.module.css  ContextMenu.tsx  Logo.tsx  MarkdownRenderer.tsx  Sidebar.module.css  Sidebar.tsx  TagPicker.module.css  TagPicker.tsx  TaskModal.module.css  TaskModal.tsx  Toast.module.css  Toast.tsx
src/store/: useTaskStore.ts
src/styles/: variables.css
src/types/: index.ts
src/views/: AllTasksView.tsx  CalendarView.module.css  CalendarView.tsx  DailyFocusView.module.css  DailyFocusView.tsx  SearchView.module.css  SearchView.tsx  SecureNotesView.tsx  SettingsView.module.css  SettingsView.tsx  TrashView.module.css  TrashView.tsx
