[package]
name = "workingnote"
version = "0.3.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "workingnote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
